# cppTools

./: .gitignore  CMakeLists.txt  README.md
include/: PlatformThreading.h  PrivateCaller.h
test/: test.h  testPlatformThreading.cpp  testPrivateCall.cpp  testmain.cpp
